--- a/dpdk_daemon/Makefile
+++ b/dpdk_daemon/Makefile
@@ -44,7 +44,7 @@ please change the definition of the RTE_TARGET environment variable)
 endif
 
 # binary name
-APP = daemon
+APP = dpdk_daemon
 
 # all source are stored in SRCS-y
 SRCS-y := main.c init.c args.c
