Makefile is modified to support dpdk

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,19 @@
+ifeq ($(RTE_SDK),)
+$(error "Please define RTE_SDK environment variable")
+endif
+
+# Default target, can be overriden by command line or environment
+RTE_TARGET ?= x86_64-native-linuxapp-gcc
+
+INCS = -I$(RTE_SDK)/$(RTE_TARGET)/include
+LIBDIR = -L$(RTE_SDK)/$(RTE_TARGET)/lib
+
 CXX = g++
-CPPFLAGS += -I/usr/local/include -g -pthread
-CXXFLAGS += -std=c++11
-LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++ grpc`       \
+CPPFLAGS += -I/usr/local/include -g -pthread 
+CXXFLAGS += -std=c++11 -mssse3 -O3 $(INCS) $(LIBDIR)
+LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++ grpc`\
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
-           -lprotobuf -lpthread -ldl
+           -lprotobuf -lpthread -ldpdk -ldl  
 PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
 GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
@@ -19,13 +29,13 @@ vpath %.proto $(PROTOS_PATH)
 all: micronf_orchest micronf_agent_daemon
 
 micronf_agent: 
-	$(CXX) $^ $(LDFLAGS) -o $@
+	$(CXX) $^ $(INCS) $(LDFLAGS)  $(LIBDIR) -o $@
 
 micronf_orchest: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_orchest.o
-	$(CXX) $^ $(LDFLAGS) -o $@
+	$(CXX) $^ $(INCS) $(LDFLAGS) $(LIBDIR) -o $@
 
 micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent.o micronf_agent_daemon.o
-	$(CXX) $^ $(LDFLAGS) -o $@
+	$(CXX) $^ $(INCS) $(LDFLAGS) $(LIBDIR) -o $@
 
 
 .PRECIOUS: %.grpc.pb.cc
