[important] Whole-archive flag is added

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,14 +6,15 @@ endif
 RTE_TARGET ?= x86_64-native-linuxapp-gcc
 
 INCS = -I$(RTE_SDK)/$(RTE_TARGET)/include
-LIBDIR = -L$(RTE_SDK)/$(RTE_TARGET)/lib
+LDFLAGS = -L$(RTE_SDK)/$(RTE_TARGET)/lib -L/usr/local/lib
 
 CXX = g++
-CPPFLAGS += -I/usr/local/include -g -pthread 
-CXXFLAGS += -std=c++11 -mssse3 -O3 $(INCS) $(LIBDIR)
-LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++ grpc`\
+#CPPFLAGS += -I/usr/local/include -g -pthread 
+CXXFLAGS += -std=c++11 -mssse3 -g -O3 $(INCS) $(LIBDIR)
+LDLIBS +=  `pkg-config --libs grpc++ grpc`\
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
-           -lprotobuf -lpthread -ldpdk -ldl  
+           -lprotobuf  -Wl,--whole-archive -ldpdk -Wl,--no-whole-archive -libverbs -lpthread -ldl
+           #-lprotobuf -lpthread -ldpdk -ldl   
 PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
 GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
@@ -29,13 +30,13 @@ vpath %.proto $(PROTOS_PATH)
 all: micronf_orchest micronf_agent_daemon
 
 micronf_agent: 
-	$(CXX) $^ $(INCS) $(LDFLAGS)  $(LIBDIR) -o $@
+	$(CXX) -c $^ $(INCS) -o $@
 
 micronf_orchest: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_orchest.o
-	$(CXX) $^ $(INCS) $(LDFLAGS) $(LIBDIR) -o $@
+	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
 micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent.o micronf_agent_daemon.o
-	$(CXX) $^ $(INCS) $(LDFLAGS) $(LIBDIR) -o $@
+	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
 
 .PRECIOUS: %.grpc.pb.cc
