--- a/src/Makefile
+++ b/src/Makefile
@@ -32,10 +32,13 @@ all: micronf_config micronf_agent_daemon micronf_orchest
 micronf_agent:  
 	$(CXX) -c $^ $(INCS) -o $@
 
+nic_classifier:
+	$(CXX) -c $^ $(INCS) -o $@
+
 micronf_orchest: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_orchest.o micronf_config.pb.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
-micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent.o micronf_agent_daemon.o  micronf_config.pb.o 
+micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent_daemon.o  micronf_config.pb.o micronf_agent.o nic_classifier.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
 
