Optimize datapath for better pps.

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ LDFLAGS = -L$(RTE_SDK)/$(RTE_TARGET)/lib -L/usr/local/lib -Xlinker -Map=a.map
 
 CXX = g++
 #CPPFLAGS += -I/usr/local/include -g -pthread 
-CXXFLAGS += -std=c++11 -mssse3 -g -O3 $(INCS) $(LIBDIR)
+CXXFLAGS += -std=c++11 -mssse3 -O3 $(INCS) $(LIBDIR)
 LDLIBS +=  -Wl,--whole-archive -lrte_pmd_mlx4 -ldpdk -libverbs -Wl,--no-whole-archive\
 					 `pkg-config --libs grpc++ grpc --libs protobuf`\
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
