monitoring task is assigned to separate thread and lcore

--- a/src/Makefile
+++ b/src/Makefile
@@ -38,10 +38,13 @@ cidr_address.o: util/cidr_address.cc
 nic_classifier.o: nic_classifier.cc 
 	$(CXX) -c $(CXXFLAGS) $^ $(INCS) -o $@
 
+micronf_monitor.o: micronf_monitor.cc
+	$(CXX) -c $(CXXFLAGS) $^ $(INCS) -o $@
+
 micronf_orchest: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_orchest.o micronf_config.pb.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
-micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent_daemon.o  micronf_config.pb.o micronf_agent.o cidr_address.o nic_classifier.o
+micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent_daemon.o  micronf_config.pb.o micronf_agent.o cidr_address.o nic_classifier.o micronf_monitor.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
 
