testing auto scale by addeing delay on monitor thread

--- a/confs/mac_swapper_101.conf
+++ b/confs/mac_swapper_101.conf
@@ -17,27 +17,14 @@ port_configs {
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
+    key: "nic_port_id"
     value: "0"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_1_2"
-  }
-}
-port_configs {
-  port_index: 1
-  port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
-  port_parameters {
-    key: "port_id"
-    value: "1"
-  }
-  port_parameters {
-    key: "ring_id"
-    value: "rx_ring_1_3"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
 instance_id: 101
