remove path to /ust/local/lib as dpdk dependant libraries could be found in /home/h4bian/aqua10/dpdk-stable-17.05.2/x86_64-native-linuxapp-gcc

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,11 +6,11 @@ endif
 RTE_TARGET ?= x86_64-native-linuxapp-gcc
 
 INCS = -I$(RTE_SDK)/$(RTE_TARGET)/include
-LDFLAGS = -L$(RTE_SDK)/$(RTE_TARGET)/lib -L/usr/local/lib
+LDFLAGS = -L$(RTE_SDK)/$(RTE_TARGET)/lib
 
 CXX = g++
 #CPPFLAGS += -I/usr/local/include -g -pthread 
-CXXFLAGS += -std=c++11 -mssse3 -O3 $(INCS) $(LIBDIR)
+CXXFLAGS += -std=c++11 -mssse3 -O3 $(INCS) -Wno-write-strings
 LDLIBS +=  `pkg-config --libs grpc++ grpc --libs protobuf`\
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
            -lprotobuf  -Wl,--whole-archive -ldpdk -Wl,--no-whole-archive -libverbs -lpthread -ldl
