add cpuid and share core in the config file

--- a/confs/mac_swapper_test.conf
+++ b/confs/mac_swapper_test.conf
@@ -2,6 +2,9 @@ packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1 
 instance_id: 1
+share_core: true
+semaphore_cpuid: 2
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
