--- a/confs/MacSwap_ShareCore_2.conf
+++ b/confs/MacSwap_ShareCore_2.conf
@@ -2,8 +2,21 @@ packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 2
-share_core: true
-semaphore_cpuid: 3
+
+pp_parameters {
+  key: "semaphore"
+  value: 1
+}
+
+pp_parameters {
+  key: "share_core"
+  value: 1
+}
+
+pp_parameters {
+  key: "cpu_id"
+  value: 3
+}
 
 port_configs {
   port_index: 0
