--- a/confs/MacSwap_ShareCore_3.conf
+++ b/confs/MacSwap_ShareCore_3.conf
@@ -2,8 +2,21 @@ packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 3
-share_core: false
-semaphore_cpuid: -1
+
+pp_parameters {
+  key: "semaphore"
+  value: 0
+}
+
+pp_parameters {
+  key: "share_core"
+  value: 0
+}
+
+pp_parameters {
+  key: "cpu_id"
+  value: 5
+}
 
 port_configs {
   port_index: 0
