Parameters (comp_load, debug) are added to ease-up experimenting

--- a/confs/MacSwap_ShareCore_1.conf
+++ b/confs/MacSwap_ShareCore_1.conf
@@ -10,12 +10,25 @@ pp_parameters {
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
   key: "cpu_id"
   value: 3
+}
+
+# Multiple the imitation work with 
+# the value of comp_load.
+pp_parameters {
+  key: "comp_load"
+  value: 1
+}
+
+# Print cycles info if debug is 1.
+pp_parameters {
+  key: "debug"
+  value: 0
 }
 
 port_configs {
