--- a/confs/MacSwap_ShareCore_3.conf
+++ b/confs/MacSwap_ShareCore_3.conf
@@ -18,6 +18,12 @@ pp_parameters {
   value: 5
 }
 
+# Print cycles info if debug is 1.
+pp_parameters {
+  key: "debug"
+  value: 1
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
