--- a/confs/MacSwap_ShareCore_3.conf
+++ b/confs/MacSwap_ShareCore_3.conf
@@ -10,18 +10,12 @@ pp_parameters {
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 5
-}
-
-# Print cycles info if debug is 1.
-pp_parameters {
-  key: "debug"
-  value: 1
+  value: 3
 }
 
 port_configs {
@@ -41,13 +35,13 @@ port_configs {
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
-    value: "1"
+    key: "port_id"
+    value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_3"
   }
 }
