--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -1,7 +1,7 @@
 packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 1
+instance_id: 6
 
 pp_parameters {
   key: "semaphore"
@@ -10,14 +10,14 @@ pp_parameters {
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 3
+  value: 5
 }
- 
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
@@ -28,20 +28,20 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_0"
+    value: "rx_ring_5"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
-    value: "0"
+    key: "nic_port_id"
+    value: "1"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_1"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
