add comp_load=0 in configs

--- a/confs/MacSwap_ShareCore_1.conf
+++ b/confs/MacSwap_ShareCore_1.conf
@@ -17,6 +17,11 @@ pp_parameters {
   key: "cpu_id"
   value: 3
 }
+
+pp_parameters {
+  key: "comp_load"
+  value: 0
+}
  
 port_configs {
   port_index: 0
