--- a/confs/MacSwap_ShareCore_2.conf
+++ b/confs/MacSwap_ShareCore_2.conf
@@ -18,6 +18,10 @@ pp_parameters {
   value: 3
 }
 
+pp_parameters {
+  key: "comp_load"
+  value: 0
+}
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
