--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -18,6 +18,11 @@ pp_parameters {
   value: 5
 }
 
+pp_parameters {
+  key: "comp_load"
+  value: 0
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
