Only use 3 uNFs for measuring cycles

--- a/confs/MacSwap_ShareCore_1.conf
+++ b/confs/MacSwap_ShareCore_1.conf
@@ -22,6 +22,11 @@ pp_parameters {
   key: "comp_load"
   value: 0
 }
+
+pp_parameters {
+  key: "debug"
+  value: 1
+}
  
 port_configs {
   port_index: 0
