--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -23,6 +23,10 @@ pp_parameters {
   value: 0
 }
 
+pp_parameters {
+  key: "debug"
+  value: 1
+}
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
@@ -33,7 +37,7 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_5"
+    value: "rx_ring_2"
   }
 }
 
