--- a/confs/MacSwap_ShareCore_2.conf
+++ b/confs/MacSwap_ShareCore_2.conf
@@ -22,6 +22,12 @@ pp_parameters {
   key: "comp_load"
   value: 0
 }
+
+pp_parameters {
+  key: "debug"
+  value: 1
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
