Every microservice conf MUST have cpu_id in its config file. Sleeper_1.conf is updated

--- a/confs/Sleeper_1.conf
+++ b/confs/Sleeper_1.conf
@@ -2,10 +2,17 @@ packet_processor_class: "Sleepy"
 num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 1
+
 pp_parameters {
   key: "sleep_duration_us",
-  value: "32"
+  value: 12
 }
+
+pp_parameters {
+  key: "cpu_id"
+  value: 3
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
