--- a/confs/MacSwap_ShareCore_1.conf
+++ b/confs/MacSwap_ShareCore_1.conf
@@ -17,7 +17,12 @@ pp_parameters {
   key: "comp_load"
   value: 0
 }
- 
+
+pp_parameters {
+  key: "yield_after_kbatch"
+  value: 16
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
