--- a/confs/MacSwap_ShareCore_5.conf
+++ b/confs/MacSwap_ShareCore_5.conf
@@ -18,6 +18,11 @@ pp_parameters {
   value: 0
 }
 
+pp_parameters {
+  key: "yield_after_kbatch"
+  value: 16
+}
+
 port_configs {
   port_index: 0
   port_type: INGRESS_PORT
