MacSwapper can specify the dst_mac addr in its config

--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -3,6 +3,9 @@ num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 6
 
+# 3c:fd:fe:ad:84:55
+# dest_mac: "5584adfefd3c"
+
 pp_parameters {
   key: "share_core"
   value: 0
