--- a/confs/Chain.conf
+++ b/confs/Chain.conf
@@ -1,6 +1,4 @@
-../confs/MacSwap_ShareCore_1.conf
-../confs/MacSwap_ShareCore_2.conf
-../confs/MacSwap_ShareCore_3.conf
-../confs/MacSwap_ShareCore_4.conf
+../confs/Sleeper_1.conf
+../confs/Sleeper_2.conf
 ../confs/MacSwap_ShareCore_6.conf
 
