--- a/confs/MacRewriter.conf
+++ b/confs/MacRewriter.conf
@@ -1,26 +1,29 @@
-packet_processor_class: "Sleepy"
+packet_processor_class: "MacRewriter"
 num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 1
 
-pp_parameters {
-  key: "sleep_duration_us",
-  value: 1
-}
+# 3c:fd:fe:ad:84:55
+dest_mac: "5484adfefd3c"
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
+}
+
+pp_parameters {
+  key: "cpu_id"
+  value: 5
+}
+
+pp_parameters {
+  key: "comp_load"
+  value: 0
 }
 
 pp_parameters {
   key: "yield_after_kbatch"
   value: 2
-}
-
-pp_parameters {
-  key: "cpu_id"
-  value: 6
 }
 
 port_configs {
@@ -40,13 +43,13 @@ port_configs {
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
+    key: "nic_port_id"
     value: "0"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_1"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
