share_core profiling experiment done. 6macswapper + 1mac_rewritter = 8.1mpps

--- a/confs/Chain.conf
+++ b/confs/Chain.conf
@@ -1,2 +1,7 @@
+../confs/MacRewriter.conf
+../confs/MacSwap_ShareCore_1.conf
+../confs/MacSwap_ShareCore_2.conf
+../confs/MacSwap_ShareCore_3.conf
+../confs/MacSwap_ShareCore_4.conf
+../confs/MacSwap_ShareCore_5.conf
 ../confs/MacSwap_ShareCore_6.conf
-
