--- a/confs/MacSwap_ShareCore_4.conf
+++ b/confs/MacSwap_ShareCore_4.conf
@@ -20,7 +20,13 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
+}
+
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
