--- a/confs/MacRewriter.conf
+++ b/confs/MacRewriter.conf
@@ -1,10 +1,10 @@
 packet_processor_class: "MacRewriter"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 1
+instance_id: 6
 
 # 3c:fd:fe:ad:84:55
-dest_mac: "5484adfefd3c"
+dest_mac: "5584adfefd3c"
 
 pp_parameters {
   key: "share_core"
@@ -23,7 +23,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 2
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
@@ -36,7 +41,7 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_2"
+    value: "rx_ring_6"
   }
 }
 
@@ -46,7 +51,7 @@ port_configs {
   port_class: "RteNICEgressPort"
   port_parameters {
     key: "nic_port_id"
-    value: "0"
+    value: "1"
   }
   port_parameters {
     key: "nic_queue_id"
