--- a/confs/MacSwap_ShareCore_2.conf
+++ b/confs/MacSwap_ShareCore_2.conf
@@ -5,12 +5,12 @@ instance_id: 2
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 4
+  value: 3
 }
 
 pp_parameters {
@@ -20,7 +20,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
