--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -1,11 +1,11 @@
 packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 3
+instance_id: 7
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
@@ -20,7 +20,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
@@ -33,20 +38,19 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_0"
+    value: "rx_ring_5"
   }
 }
-
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
-    value: "1"
+    key: "port_id"
+    value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_6"
   }
 }
