--- a/confs/Chain.conf
+++ b/confs/Chain.conf
@@ -1,3 +1,7 @@
-../confs/MacSwap_ShareCore_1.conf
-../confs/MacSwap_ShareCore_2.conf
-../confs/MacSwap_ShareCore_6.conf
+../confs/ip_ttl_1.conf
+../confs/ip_ttl_2.conf
+../confs/ip_ttl_3.conf
+../confs/ip_ttl_4.conf
+../confs/ip_ttl_5.conf
+../confs/ip_ttl_6.conf
+../confs/MacRewriter.conf
