--- a/confs/ip_ttl_1.conf
+++ b/confs/ip_ttl_1.conf
@@ -1,19 +1,16 @@
-packet_processor_class: "MacRewriter"
+packet_processor_class: "IPTtlDecrementer"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 5
-
-# 3c:fd:fe:ad:84:55
-dest_mac: "5584adfefd3c"
+instance_id: 1
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 5
+  value: 3
 }
 
 pp_parameters {
@@ -23,7 +20,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 2
+  value: 16
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
@@ -36,20 +38,20 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_6"
+    value: "rx_ring_0"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
-    value: "1"
+    key: "port_id"
+    value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_1"
   }
 }
