Experimenting with increasing num of mac_swap in one core from 2 upto 12

--- a/confs/Chain.conf
+++ b/confs/Chain.conf
@@ -1,7 +1,13 @@
-../confs/ip_ttl_1.conf
-../confs/ip_ttl_2.conf
-../confs/ip_ttl_3.conf
-../confs/ip_ttl_4.conf
-../confs/ip_ttl_5.conf
-../confs/ip_ttl_6.conf
+../confs/mac_swap_1.conf
+../confs/mac_swap_2.conf
+../confs/mac_swap_3.conf
+../confs/mac_swap_4.conf
+../confs/mac_swap_5.conf
+../confs/mac_swap_6.conf
+../confs/mac_swap_7.conf
+../confs/mac_swap_8.conf
+../confs/mac_swap_9.conf
+../confs/mac_swap_10.conf
+../confs/mac_swap_11.conf
+../confs/mac_swap_12.conf
 ../confs/MacRewriter.conf
