real chain exp without httpclass without pcap working

--- a/confs/RealChain.conf
+++ b/confs/RealChain.conf
@@ -1,5 +1,6 @@
 ../confs/realchain/check_header.conf
 ../confs/realchain/filt_udptcp.conf
+../confs/realchain/classfy_http.conf
 ../confs/realchain/count_url.conf
 ../confs/realchain/validate_url.conf
 ../confs/realchain/MacRewrite_Tx.conf
