add port to go to Drop or MacSwap

--- a/confs/Chain.conf
+++ b/confs/Chain.conf
@@ -1,2 +1,4 @@
 ../confs/realchain/check_header.conf
+../confs/realchain/filt_udptcp.conf
+../confs/realchain/drop.conf
 ../confs/realchain/MacSwapper.conf
