--- a/confs/realchain/check_header.conf
+++ b/confs/realchain/check_header.conf
@@ -1,6 +1,6 @@
 packet_processor_class: "CheckHeader"
 num_ingress_ports: 1
-num_egress_ports: 1
+num_egress_ports: 2
 instance_id: 1
 
 pp_parameters {
@@ -51,3 +51,16 @@ port_configs {
   }
 }
 
+port_configs {
+  port_index: 1
+  port_type: EGRESS_PORT
+  port_class: "RteEgressPort"
+  port_parameters {
+    key: "port_id"
+    value: "1"
+  }
+  port_parameters {
+    key: "ring_id"
+    value: "rx_ring_4"
+  }
+}
