--- a/confs/realchain/filt_udptcp.conf
+++ b/confs/realchain/filt_udptcp.conf
@@ -1,6 +1,6 @@
 packet_processor_class: "FiltUDPTCP"
 num_ingress_ports: 1
-num_egress_ports: 1
+num_egress_ports: 2
 instance_id: 2
 
 pp_parameters {
@@ -48,5 +48,19 @@ port_configs {
   port_parameters {
     key: "ring_id"
     value: "rx_ring_2"
+  }
+}
+
+port_configs {
+  port_index: 1
+  port_type: EGRESS_PORT
+  port_class: "RteEgressPort"
+  port_parameters {
+    key: "port_id"
+    value: "1"
+  }
+  port_parameters {
+    key: "ring_id"
+    value: "rx_ring_4"
   }
 }
