--- a/confs/middleboxes/monitor/monitor.conf
+++ b/confs/middleboxes/monitor/monitor.conf
@@ -1,4 +1,3 @@
-../confs/check_header_mn.conf
-../confs/classfy_http_mn.conf
-../confs/MacSwap_1_mn.conf
-../confs/MacSwap_2_mn.conf
+../confs/middleboxes/monitor/check_header_mn.conf
+../confs/middleboxes/monitor/classfy_http_mn.conf
+../confs/middleboxes/monitor/MacSwap_1_mn.conf
