--- a/confs/middleboxes/validator/validator.conf
+++ b/confs/middleboxes/validator/validator.conf
@@ -1,4 +1,4 @@
-../confs/check_header_vd.conf
-../confs/classfy_http_vd.conf
-../confs/validate_url_vd.conf
-../confs/MacSwap_vd.conf
+../confs/middleboxes/validator/check_header_vd.conf
+../confs/middleboxes/validator/classfy_http_vd.conf
+../confs/middleboxes/validator/validate_url_vd.conf
+../confs/middleboxes/validator/MacSwap_1_vd.conf
