--- a/confs/middleboxes/firewall/check_header_fw.conf
+++ b/confs/middleboxes/firewall/check_header_fw.conf
@@ -1,6 +1,6 @@
 packet_processor_class: "CheckHeader"
 num_ingress_ports: 1
-num_egress_ports: 1
+num_egress_ports: 2
 instance_id: 1
 
 pp_parameters {
@@ -11,6 +11,11 @@ pp_parameters {
 pp_parameters {
   key: "cpu_id"
   value: 3
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 pp_parameters {
@@ -46,3 +51,17 @@ port_configs {
   }
 }
 
+port_configs {
+  port_index: 1
+  port_type: EGRESS_PORT
+  port_class: "RteEgressPort"
+  port_parameters {
+    key: "port_id"
+    value: "1"
+  }
+  port_parameters {
+    key: "ring_id"
+    # value: "rx_ring_44"
+    value: "rx_ring_2"
+  }
+}
