--- a/confs/middleboxes/monitor/check_header_mn.conf
+++ b/confs/middleboxes/monitor/check_header_mn.conf
@@ -1,6 +1,6 @@
 packet_processor_class: "CheckHeader"
 num_ingress_ports: 1
-num_egress_ports: 1
+num_egress_ports: 2
 instance_id: 1
 
 pp_parameters {
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 6
+  value: 3
 }
 
 pp_parameters {
@@ -43,6 +43,21 @@ port_configs {
   port_parameters {
     key: "ring_id"
     value: "rx_ring_1"
+  }
+}
+
+port_configs {
+  port_index: 1
+  port_type: EGRESS_PORT
+  port_class: "RteEgressPort"
+  port_parameters {
+    key: "port_id"
+    value: "1"
+  }
+  port_parameters {
+    key: "ring_id"
+    #value: "rx_ring_44"
+    value: "rx_ring_2"
   }
 }
 
