--- a/confs/middleboxes/validator/classfy_http_vd.conf
+++ b/confs/middleboxes/validator/classfy_http_vd.conf
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 7
+  value: 3
 }
 
 pp_parameters {
@@ -56,6 +56,7 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
+    #value: "rx_ring_44"
     value: "rx_ring_3"
   }
 }
