--- a/confs/mac_swap_12.conf
+++ b/confs/mac_swap_12.conf
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 3
+  value: 5
 }
 
 pp_parameters {
@@ -33,21 +33,21 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_11"
+    value: "rx_ring_10"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
-    value: "0"
+    key: "nic_port_id"
+    value: "1"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_12"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
  
