--- a/confs/middleboxes/firewall/firewall.conf
+++ b/confs/middleboxes/firewall/firewall.conf
@@ -1,38 +1,3 @@
-packet_processor_class: "DropPacket"
-num_ingress_ports: 1
-num_egress_ports: 0
-instance_id: 4
-
-pp_parameters {
-  key: "share_core"
-  value: 0
-}
-
-pp_parameters {
-  key: "cpu_id"
-  value: 1
-}
-
-pp_parameters {
-  key: "kNumPrefetch"
-  value: 8
-}
-
-pp_parameters {
-  key: "comp_load"
-  value: 0
-}
-
-port_configs {
-  port_index: 0
-  port_type: INGRESS_PORT
-  port_class: "RteIngressPort"
-  port_parameters {
-    key: "port_id"
-    value: "0"
-  }
-  port_parameters {
-    key: "ring_id"
-    value: "rx_ring_4"
-  }
-}
+../confs/middleboxes/monitor/check_header_fw.conf
+../confs/middleboxes/monitor/filt_udptcp_fw.conf
+../confs/middleboxes/monitor/MacSwap_fw.conf
