add micronf_supervisor that currently gather info of each ring occupancy

--- a/confs/MacSwap_ShareCore_3.conf
+++ b/confs/MacSwap_ShareCore_3.conf
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 3
+  value: 7
 }
 
 pp_parameters {
@@ -20,7 +20,7 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
 }
 
 port_configs {
@@ -40,13 +40,13 @@ port_configs {
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
+    key: "nic_port_id"
     value: "0"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_3"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
