--- a/confs/MacSwap_ShareCore_1.conf
+++ b/confs/MacSwap_ShareCore_1.conf
@@ -5,7 +5,7 @@ instance_id: 1
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
@@ -21,6 +21,11 @@ pp_parameters {
 pp_parameters {
   key: "yield_after_kbatch"
   value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 0
 }
 
 port_configs {
