Add some codes to ease the execution of the estimator.

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ STUBDIR = ./
 
 vpath %.proto $(PROTOS_PATH)
 
-all: micronf_config micronf_agent_daemon
+all: micronf_config micronf_agent_daemon micronf_cycles_estimator micronf_supervisor
 
 micronf_agent: 
 	$(CXX) -c $^ $(INCS) -o $@
