--- a/confs/MacSwap_ShareCore_2.conf
+++ b/confs/MacSwap_ShareCore_2.conf
@@ -5,12 +5,12 @@ instance_id: 2
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 7
+  value: 5
 }
 
 pp_parameters {
@@ -20,6 +20,11 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
   value: 8
 }
 
