--- a/confs/MacSwap_ShareCore_3.conf
+++ b/confs/MacSwap_ShareCore_3.conf
@@ -5,12 +5,12 @@ instance_id: 3
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 7
+  value: 2
 }
 
 pp_parameters {
@@ -40,13 +40,13 @@ port_configs {
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
+    key: "port_id"
     value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_3"
   }
 }
