--- a/src/Makefile
+++ b/src/Makefile
@@ -48,7 +48,7 @@ micronf_orchest: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_orchest.o mi
 micronf_agent_daemon: micronf_agent.pb.o micronf_agent.grpc.pb.o micronf_agent_daemon.o  micronf_config.pb.o micronf_agent.o cidr_address.o nic_classifier.o micronf_monitor.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -o $@
 
-micronf_supervisor: micronf_supervisor.o micronf_config.pb.o
+micronf_supervisor: micronf_supervisor.o micronf_config.pb.o sched.o
 	$(CXX) $^ $(INCS) $(LDLIBS) $(LDFLAGS) -levent -o $@
 
 micronf_cycles_estimator: micronf_cycles_estimator.o
@@ -56,6 +56,9 @@ micronf_cycles_estimator: micronf_cycles_estimator.o
 
 micronf_config: micronf_config.proto micronf_config.pb.cc
 	protoc --cpp_out=. micronf_config.proto
+
+sched.o: sched/sched.cc
+	 $(CXX) -c $(CXXFLAGS) $^ $(INCS) -o $@
 
 .PRECIOUS: %.grpc.pb.cc
 %.grpc.pb.cc: %.proto
@@ -73,4 +76,4 @@ clean:
 	rm -f micronf_orchest
 	rm -f micronf_supervisor
 	rm -f micronf_cycles_estimator
-
+	rm -f sched.o
