Using sched/sched.h. Signal method does not work.

--- a/confs/MacSwap_ShareCore_5.conf
+++ b/confs/MacSwap_ShareCore_5.conf
@@ -5,12 +5,12 @@ instance_id: 5
 
 pp_parameters {
   key: "share_core"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 3
+  value: 1
 }
 
 pp_parameters {
@@ -20,7 +20,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
@@ -50,3 +55,4 @@ port_configs {
     value: "rx_ring_5"
   }
 }
+
