--- a/confs/MacSwap_ShareCore_4.conf
+++ b/confs/MacSwap_ShareCore_4.conf
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 2
+  value: 1
 }
 
 pp_parameters {
@@ -20,6 +20,11 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
   value: 8
 }
 
