--- a/confs/MacSwap_ShareCore_6.conf
+++ b/confs/MacSwap_ShareCore_6.conf
@@ -10,7 +10,7 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 7
+  value: 1
 }
 
 pp_parameters {
@@ -20,7 +20,12 @@ pp_parameters {
 
 pp_parameters {
   key: "yield_after_kbatch"
-  value: 16
+  value: 8
+}
+
+pp_parameters {
+  key: "kNumPrefetch"
+  value: 8
 }
 
 port_configs {
@@ -33,20 +38,20 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_4"
+    value: "rx_ring_5"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
-    value: "1"
+    key: "port_id"
+    value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_6"
   }
 }
