After CNSM submission! - add macro in micronf_supervisor.cc to allow easy switching between timer-only and full feature of UNiS. - complexity, shares, UPPER/LOWER_BOUND buffer occupancy, and ideal percentage occupancy are put as global variables. - ImitatorPktsize conf is added, this type of NF follows a step function to imitate processing load based on pktsize.

--- a/confs/ImitatorPktsize_1.conf
+++ b/confs/ImitatorPktsize_1.conf
@@ -14,6 +14,11 @@ pp_parameters {
 }
 
 pp_parameters {
+  key: "comp_load"
+  value: 0
+}
+
+pp_parameters {
   key: "yield_after_kbatch"
   value: 8
 }
