--- a/confs/ImitatorPktsize_7.conf
+++ b/confs/ImitatorPktsize_7.conf
@@ -1,7 +1,7 @@
-packet_processor_class: "MacSwapper"
+packet_processor_class: "ImitatorPktsize"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 2
+instance_id: 7
 
 pp_parameters {
   key: "share_core"
@@ -10,11 +10,6 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 1
-}
-
-pp_parameters {
-  key: "comp_load"
   value: 1
 }
 
@@ -38,7 +33,7 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_1"
+    value: "rx_ring_6"
   }
 }
 
@@ -52,6 +47,6 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_2"
+    value: "rx_ring_7"
   }
 }
