--- a/confs/MacSwap_ShareCore_101.conf
+++ b/confs/MacSwap_ShareCore_101.conf
@@ -1,7 +1,10 @@
 packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
-instance_id: 2
+instance_id: 51
+
+#3c:fd:fe:ad:74:e5
+#dest_mac: "e574adfefd3c"
 
 pp_parameters {
   key: "share_core"
@@ -10,12 +13,12 @@ pp_parameters {
 
 pp_parameters {
   key: "cpu_id"
-  value: 1
+  value: 3
 }
 
 pp_parameters {
   key: "comp_load"
-  value: 1
+  value: 0
 }
 
 pp_parameters {
@@ -38,20 +41,20 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_1"
+    value: "rx_ring_11"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteEgressPort"
+  port_class: "RteNICEgressPort"
   port_parameters {
-    key: "port_id"
+    key: "nic_port_id"
     value: "0"
   }
   port_parameters {
-    key: "ring_id"
-    value: "rx_ring_2"
+    key: "nic_queue_id"
+    value: "0"
   }
 }
