--- a/confs/MacSwap_ShareCore_9.conf
+++ b/confs/MacSwap_ShareCore_9.conf
@@ -1,19 +1,19 @@
-packet_processor_class: "MacRewriter"
+packet_processor_class: "MacSwapper"
 num_ingress_ports: 1
 num_egress_ports: 1
 instance_id: 9
 
 #3c:fd:fe:ad:74:e5
-dest_mac: "e574adfefd3c"
+#dest_mac: "e574adfefd3c"
 
 pp_parameters {
   key: "share_core"
-  value: 0
+  value: 1
 }
 
 pp_parameters {
   key: "cpu_id"
-  value: 2
+  value: 1
 }
 
 pp_parameters {
@@ -41,20 +41,20 @@ port_configs {
   }
   port_parameters {
     key: "ring_id"
-    value: "rx_ring_1"
+    value: "rx_ring_8"
   }
 }
 
 port_configs {
   port_index: 0
   port_type: EGRESS_PORT
-  port_class: "RteNICEgressPort"
+  port_class: "RteEgressPort"
   port_parameters {
-    key: "nic_port_id"
+    key: "port_id"
     value: "0"
   }
   port_parameters {
-    key: "nic_queue_id"
-    value: "0"
+    key: "ring_id"
+    value: "rx_ring_9"
   }
 }
